--- a/ParqueoUlacit/Views/Vehiculo/Create.cshtml
+++ b/ParqueoUlacit/Views/Vehiculo/Create.cshtml
@@ -85,15 +85,18 @@
                 </div>
             </div>
 
-            <div class="form-group">
-                @Html.LabelFor(model => model.UsaEspacioLey7600)
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox" name="UsaEspacioLey7600" value="true" @(Model.UsaEspacioLey7600 == true ? "checked" : "") />
-                        <input type="hidden" name="UsaEspacioLey7600" value="false" />
-                    </label>
+            <div class="row">
+                <div class="col-md-6 mb-3">
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.UsaEspacioLey7600, "Usa Espacio Ley 7600", new { @class = "form-label d-block" })
+                        <div class="form-check">
+                            <input type="checkbox" class="form-check-input" id="UsaEspacioLey7600" name="UsaEspacioLey7600" value="true" @(Model.UsaEspacioLey7600 == true ? "checked" : "") />
+                            <label class="form-check-label" for="UsaEspacioLey7600">El vehículo requiere espacio según Ley 7600</label>
+                            <input type="hidden" name="UsaEspacioLey7600" value="false" />
+                        </div>
+                        @Html.ValidationMessageFor(model => model.UsaEspacioLey7600, "", new { @class = "text-danger" })
+                    </div>
                 </div>
-                @Html.ValidationMessageFor(model => model.UsaEspacioLey7600)
             </div>
 
             <div class="row mt-4">
@@ -113,8 +116,6 @@
         }
     </div>
 </div>
-
-
 
 @section Scripts {
     <script>
